# A22_wmzjbyGroup

./: .gitignore  README.md  compose.local.yaml  compose.remote.yaml
System_Design/: CURRENT_RUNBOOK.md
System_Design/version1/: ARCHITECTURE.md
System_Design/version2/: ARCHITECTURE.md
System_Design/version3/: ARCHITECTURE.md  RUN_AND_TEST.md
System_Design/version5/: architecture.md
System_Design/version7/: ARCHITECTURE.md
a22_demo/: listen_bridge.py
local/: README.md
local/edge-backend/: app.py  config.py  models.py  requirements.txt
local/edge-backend/routes/: chat.py
local/edge-backend/services/: input_preprocessor.py  observability.py  orchestrator_client.py
local/frontend/src/: main.js  styles.css
remote/: README.md
remote/avatar-service/: app.py  config.py  models.py  pyproject.toml
remote/avatar-service/routes/: generate.py  health.py
remote/avatar-service/services/: expression_generator.py  (+4 more)
remote/orchestrator/: README.md  app.py  config.py  models.py  pyproject.toml
remote/speech-service/: app.py  config.py  models.py  pyproject.toml  requirements.txt
remote/speech-service/routes/: health.py  transcribe.py
remote/speech-service/services/: asr_runtime.py  feature_extractor.py  storage.py
remote/vision-service/: app.py  config.py  models.py  pyproject.toml
remote/vision-service/routes/: extract.py  health.py
remote/vision-service/services/: frame_feature_extractor.py  storage.py
shared/: README.md  observability.py
shared/contracts/: api_v1.md  chat_request.example.json  chat_response.example.json  schemas.py
(+40 files in other folders)
