[project]
name = "a22-speech-service"
version = "0.1.0"
description = "Remote speech recognition service for A22"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.0",
  "pydantic==2.7.0",
  "numpy==1.26.4",
  "httpx==0.28.1",
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "transformers==4.51.3",
  "accelerate==1.3.0",
  "safetensors==0.7.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
